<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".onBoardingScreen.onBoardingScreenFragments.OnBoardingScreenOne">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/anim1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/nextScreenText1"
        android:textSize="@dimen/bigSizeOnBoardingText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/nextScreenText2"
        android:textSize="@dimen/mediumSizeOnBoardingText" />


    <Button
        android:id="@+id/buttonFirtsOnBoarding"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:layout_marginTop="70dp"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/next"
        android:textColor="@color/general"
        android:textSize="15sp"
        app:cornerRadius="15dp"
        app:strokeColor="@color/general"
        app:strokeWidth="2dp" />


</LinearLayout>